base/api/ingress-hud-stream.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hud-stream
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /hud-stream/$1
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
  namespace: 5stack
spec:
  ingressClassName: nginx
  rules:
    - host: $(HUD_DOMAIN)
      http:
        paths:
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /(.*)
            pathType: ImplementationSpecific
